<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModelLayout"
            type="com.example.examentvmaze.view.movie_detail.DetailMovieViewModel" />


    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ProgressBar
            android:id="@+id/pb"
            visibleProgress="@{ viewModelLayout.loadProgress }"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            visibleDetail="@{ viewModelLayout.loadProgress }"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/tvImageMovie"
                android:layout_width="@dimen/dp_0"
                android:layout_height="@dimen/dp_0"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_10"
                android:scaleType="centerCrop"
                app:imageGlide="@{ viewModelLayout.moviesDetail.image.medium }"
                app:layout_constraintBottom_toTopOf="@+id/gH4"
                app:layout_constraintEnd_toStartOf="@+id/gV45"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gV45"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.45" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gH4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.4" />

            <TextView
                android:id="@+id/tvNameDetailMovie"
                android:layout_width="@dimen/dp_0"
                android:layout_height="@dimen/dp_40"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_20"
                android:text="@{ viewModelLayout.moviesDetail.network.name == null? @string/movie_title: viewModelLayout.moviesDetail.name}"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:autoSizeMaxTextSize="@dimen/sp_36"
                app:autoSizeMinTextSize="@dimen/sp_18"
                app:autoSizeStepGranularity="@dimen/sp_3"
                app:autoSizeTextType="uniform"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/tvImageMovie"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvNameNetworkMovie"
                android:layout_width="@dimen/dp_0"
                android:layout_height="@dimen/dp_30"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_20"
                android:text="@{ viewModelLayout.moviesDetail.network.name == null? @string/unknown_network: viewModelLayout.moviesDetail.network.name }"
                android:textStyle="bold"
                app:autoSizeMaxTextSize="@dimen/sp_18"
                app:autoSizeMinTextSize="@dimen/sp_15"
                app:autoSizeStepGranularity="@dimen/sp_3"
                app:autoSizeTextType="uniform"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvImageMovie"
                app:layout_constraintTop_toBottomOf="@+id/tvNameDetailMovie" />

            <TextView
                android:id="@+id/tvRatingMovie"
                android:layout_width="@dimen/dp_0"
                android:layout_height="@dimen/dp_30"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_20"
                android:text="@{@string/rating(String.valueOf(viewModelLayout.moviesDetail.rating.average)) }"
                android:textStyle="bold"
                app:autoSizeMaxTextSize="@dimen/sp_18"
                app:autoSizeMinTextSize="@dimen/sp_15"
                app:autoSizeStepGranularity="@dimen/sp_3"
                app:autoSizeTextType="uniform"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvImageMovie"
                app:layout_constraintTop_toBottomOf="@+id/tvNameNetworkMovie" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/mbWebSite"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_30"
                android:text="@string/visit_website"
                android:textColor="?attr/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvImageMovie"
                app:layout_constraintTop_toBottomOf="@+id/tvRatingMovie"
                app:strokeWidth="@dimen/dp_0" />


            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0"
                android:fillViewport="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gH4">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvSynopsys"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_30"
                        android:layout_marginStart="@dimen/dp_10"
                        android:layout_marginTop="@dimen/dp_20"
                        android:text="@string/synopsis"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:autoSizeMaxTextSize="@dimen/sp_20"
                        app:autoSizeMinTextSize="@dimen/sp_15"
                        app:autoSizeStepGranularity="@dimen/sp_3"
                        app:autoSizeTextType="uniform"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:id="@+id/tvSummary"
                        setContext="@{ context }"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_10"
                        android:layout_marginTop="@dimen/dp_5"
                        android:layout_marginEnd="@dimen/dp_10"
                        app:layout_constraintTop_toBottomOf="@+id/tvSynopsys"
                        app:textConvertHtml="@{ viewModelLayout.moviesDetail.summary }" />

                    <LinearLayout
                        android:id="@+id/llGenders"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_10"
                        android:layout_marginTop="@dimen/dp_10"
                        android:layout_marginEnd="@dimen/dp_10"
                        android:orientation="horizontal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvSummary">

                        <TextView
                            android:layout_width="@dimen/dp_0"
                            android:layout_height="@dimen/dp_30"
                            android:layout_weight="1"
                            android:text="@string/gender"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            app:autoSizeMaxTextSize="@dimen/sp_20"
                            app:autoSizeMinTextSize="@dimen/sp_15"
                            app:autoSizeStepGranularity="@dimen/sp_3"
                            app:autoSizeTextType="uniform" />

                        <TextView
                            android:id="@+id/tvGenders"
                            addGenders="@{ viewModelLayout.moviesDetail.genres }"
                            setContext="@{ context }"
                            android:layout_width="@dimen/dp_0"
                            android:layout_height="@dimen/dp_40"
                            android:layout_weight="3"
                            app:autoSizeMaxTextSize="@dimen/sp_18"
                            app:autoSizeMinTextSize="@dimen/sp_12"
                            app:autoSizeStepGranularity="@dimen/sp_3"
                            app:autoSizeTextType="uniform" />


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llSchedule"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_10"
                        android:layout_marginTop="@dimen/dp_10"
                        android:layout_marginEnd="@dimen/dp_10"
                        android:orientation="horizontal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/llGenders">

                        <TextView
                            android:layout_width="@dimen/dp_0"
                            android:layout_height="@dimen/dp_30"
                            android:layout_weight="1"
                            android:text="@string/schedule"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            app:autoSizeMaxTextSize="@dimen/sp_20"
                            app:autoSizeMinTextSize="@dimen/sp_15"
                            app:autoSizeStepGranularity="@dimen/sp_3"
                            app:autoSizeTextType="uniform" />

                        <TextView
                            android:id="@+id/tvSchedule"
                            setContext="@{ context }"
                            android:layout_width="@dimen/dp_0"
                            android:layout_height="@dimen/dp_40"
                            android:layout_weight="3"
                            android:orientation="horizontal"
                            app:addSchedule="@{ viewModelLayout.moviesDetail.schedule }"
                            app:autoSizeMaxTextSize="@dimen/sp_18"
                            app:autoSizeMinTextSize="@dimen/sp_12"
                            app:autoSizeStepGranularity="@dimen/sp_3"
                            app:autoSizeTextType="uniform" />

                    </LinearLayout>


                    <TextView
                        android:id="@+id/tvCast"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_30"
                        android:layout_marginStart="@dimen/dp_10"
                        android:layout_marginTop="@dimen/dp_10"
                        android:text="@string/talents"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:autoSizeMaxTextSize="@dimen/sp_20"
                        app:autoSizeMinTextSize="@dimen/sp_15"
                        app:autoSizeStepGranularity="@dimen/sp_3"
                        app:autoSizeTextType="uniform"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/llSchedule" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvCast"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_10"
                        android:layout_marginEnd="@dimen/dp_10"
                        android:layout_marginBottom="@dimen/dp_20"
                        android:orientation="vertical"
                        app:adapterList="@{ viewModelLayout.movieCast }"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvCast"
                        app:spanCount="3" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.core.widget.NestedScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>